[gd_scene load_steps=48 format=3 uid="uid://caqiovb4lonpj"]

[ext_resource type="Shader" path="res://scenes/entities/Enemies/B1/hit.gdshader" id="1_cglgf"]
[ext_resource type="Script" path="res://Tests/firefly_script.gd" id="2_plwqb"]
[ext_resource type="PackedScene" uid="uid://cpbnhh4wr6ef6" path="res://objects/fireprojectile.tscn" id="3_cc4yv"]
[ext_resource type="Script" path="res://scenes/entities/Enemies/ENEMYSTATES.gd" id="3_xjrjl"]
[ext_resource type="Script" path="res://scenes/entities/Enemies/B1/Wasp/enemy_idle.gd" id="4_f5clw"]
[ext_resource type="Script" path="res://scenes/entities/Enemies/B1/Wasp/enemy_hit.gd" id="5_77r7o"]
[ext_resource type="Script" path="res://scenes/entities/Enemies/B1/Firefly/enemy_defeat.gd" id="6_57xl1"]
[ext_resource type="Script" path="res://scenes/entities/Enemies/B1/Firefly/enemy_follow.gd" id="8_4rs64"]
[ext_resource type="Script" path="res://scenes/entities/Enemies/B1/Firefly/enemy_prepare.gd" id="9_2550r"]
[ext_resource type="Texture2D" uid="uid://c745eja0irsba" path="res://Sprites/Bettlebourough/enemies/wasp/dead.png" id="10_4bn3o"]
[ext_resource type="Texture2D" uid="uid://bp2esu047qrms" path="res://Sprites/Bettlebourough/enemies/firefly/firefly0009.png" id="10_64kop"]
[ext_resource type="Script" path="res://scenes/entities/Enemies/B1/Firefly/enemy_attack.gd" id="10_l5fns"]
[ext_resource type="Texture2D" uid="uid://bvp2wew55md7f" path="res://Sprites/Bettlebourough/enemies/firefly/firefly0000.png" id="11_ejcw5"]
[ext_resource type="Texture2D" uid="uid://bhc0ue5pqbohg" path="res://Sprites/Bettlebourough/enemies/firefly/firefly0001.png" id="12_3jsxu"]
[ext_resource type="Texture2D" uid="uid://c2reyrrs77u20" path="res://Sprites/Bettlebourough/enemies/firefly/firefly0002.png" id="13_yj6h7"]
[ext_resource type="Texture2D" uid="uid://bvnflejr2shk" path="res://Sprites/Bettlebourough/enemies/firefly/firefly0003.png" id="14_j3m3a"]
[ext_resource type="Texture2D" uid="uid://oernopxy0ps8" path="res://Sprites/Bettlebourough/enemies/firefly/firefly0004.png" id="15_ke5cd"]
[ext_resource type="Texture2D" uid="uid://j1ddotw85es7" path="res://Sprites/Bettlebourough/enemies/firefly/firefly0005.png" id="16_vrjkq"]
[ext_resource type="Texture2D" uid="uid://c4mck5b5pf6t4" path="res://Sprites/Bettlebourough/enemies/firefly/firefly0006.png" id="17_1bht4"]
[ext_resource type="Texture2D" uid="uid://c00rjug4hnwgo" path="res://Sprites/Bettlebourough/enemies/firefly/firefly0007.png" id="18_0p50l"]
[ext_resource type="Texture2D" uid="uid://jyit4b0ftxva" path="res://Sprites/Bettlebourough/enemies/firefly/firefly0008.png" id="19_p32gl"]
[ext_resource type="Texture2D" uid="uid://dffqi1jsxdlxr" path="res://Sprites/Bettlebourough/enemies/firefly/fireflywings0000.png" id="21_hisbq"]
[ext_resource type="Material" uid="uid://wq8m3q6pclkd" path="res://shaders/hitshader.tres" id="22_ohcb8"]
[ext_resource type="Texture2D" uid="uid://cn5qxgcw0egxi" path="res://Sprites/Bettlebourough/enemies/firefly/fireflywings0001.png" id="23_6ca2u"]
[ext_resource type="Texture2D" uid="uid://bt3fnr25jrtjo" path="res://Sprites/Bettlebourough/enemies/firefly/fireflywings0002.png" id="24_rs34a"]
[ext_resource type="Texture2D" uid="uid://57e50kl3e6tm" path="res://Sprites/Bettlebourough/enemies/firefly/fireflywings0003.png" id="25_v641o"]
[ext_resource type="Material" uid="uid://cdgsydya4x6w7" path="res://scenes/entities/damageparticles.tres" id="30_yqpc8"]
[ext_resource type="Texture2D" uid="uid://dgjoqfguta3r" path="res://Tests/smoke.png" id="31_kwfql"]
[ext_resource type="Script" path="res://scenes/entities/Enemies/B1/hitboxComponent.gd" id="32_ed5nx"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kehak"]
shader = ExtResource("1_cglgf")
shader_parameter/active = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kxu8r"]
size = Vector2(8422, 4677)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tmulh"]
size = Vector2(229, 315)

[sub_resource type="Animation" id="Animation_wb5q1"]
resource_name = "defeat"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.133333, 0.233333, 0.3, 0.4, 0.5, 0.566667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.314159, -0.314159, 0.314159, 0.314159, -0.314159, 0.314159, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D3:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.133333, 0.233333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.314159, -0.314159, 0.314159, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D3:material:shader_parameter/active")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GPUParticles2D2:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.0232579, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Wings:current_animation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.133333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"no_wings"]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite2D:texture")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("10_64kop")]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.214)]
}
tracks/8/type = "method"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("EnemyStateMachine/EnemyDefeat")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"death"
}]
}

[sub_resource type="Animation" id="Animation_b3q0i"]
resource_name = "defeat_2"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.133333, 0.233333, 0.3, 0.4, 0.5, 0.566667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.314159, -0.314159, 0.314159, 0.314159, -0.314159, 0.314159, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D3:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.133333, 0.233333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.314159, -0.314159, 0.314159, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D3:material:shader_parameter/active")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GPUParticles2D:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.0232579, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Wings:current_animation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.133333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"no_wings"]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite2D:texture")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("10_4bn3o")]
}

[sub_resource type="Animation" id="Animation_4awq0"]
resource_name = "hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.133333, 0.233333, 0.3, 0.4, 0.5, 0.566667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.314159, -0.314159, 0.314159, 0.314159, -0.314159, 0.314159, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D3:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.133333, 0.233333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.314159, -0.314159, 0.314159, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D3:material:shader_parameter/active")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GPUParticles2D:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:is_dealing_damage")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nllgd"]
_data = {
"defeat": SubResource("Animation_wb5q1"),
"defeat_2": SubResource("Animation_b3q0i"),
"hit": SubResource("Animation_4awq0")
}

[sub_resource type="Animation" id="Animation_1x4du"]
length = 0.25
loop_mode = 2
step = 0.0125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("11_ejcw5")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D3:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2375),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(40, 14), Vector2(40, 60)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2375),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(40, 14), Vector2(40, 60)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D3:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ia2vm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyStateMachine/EnemyAttack:is_attacking")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_eht2v"]
resource_name = "attack"
length = 0.5
step = 0.0125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("11_ejcw5"), ExtResource("12_3jsxu"), ExtResource("13_yj6h7"), ExtResource("14_j3m3a"), ExtResource("15_ke5cd"), ExtResource("16_vrjkq"), ExtResource("17_1bht4"), ExtResource("18_0p50l"), ExtResource("19_p32gl"), ExtResource("11_ejcw5")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D3:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2375),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(42, -43), Vector2(42, 3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2375),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(40, 14), Vector2(40, 60)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D3:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot_projectile"
}]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("EnemyStateMachine/EnemyAttack:is_attacking")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lgrry"]
_data = {
"Idle": SubResource("Animation_1x4du"),
"RESET": SubResource("Animation_ia2vm"),
"attack": SubResource("Animation_eht2v")
}

[sub_resource type="Animation" id="Animation_i7dor"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D3:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_bgn58"]
resource_name = "no_wings"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D3:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ax6vg"]
resource_name = "wings"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D3:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0625, 0.125, 0.1875),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("21_hisbq"), ExtResource("23_6ca2u"), ExtResource("24_rs34a"), ExtResource("25_v641o")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D3:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yx5xa"]
_data = {
"RESET": SubResource("Animation_i7dor"),
"no_wings": SubResource("Animation_bgn58"),
"wings": SubResource("Animation_ax6vg")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_s65u1"]
lifetime_randomness = 0.16
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 75.53
direction = Vector3(20, -20, 20)
spread = 24.494
initial_velocity_min = 66.67
initial_velocity_max = 66.67
radial_velocity_min = -2.23517e-05
radial_velocity_max = 533.33
gravity = Vector3(0, -100, 0)
linear_accel_min = -76.37
linear_accel_max = -13.34
radial_accel_min = -2.23517e-06
radial_accel_max = 53.33
collision_mode = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kctrd"]
size = Vector2(474, 552)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0iu8b"]
size = Vector2(476.5, 487)

[node name="firefly" type="CharacterBody2D" groups=["Enemies"]]
material = SubResource("ShaderMaterial_kehak")
script = ExtResource("2_plwqb")
projectile_node = ExtResource("3_cc4yv")
health = 30
damage_value = 10
movement_type = 1

[node name="EnemyStateMachine" type="Node" parent="."]
script = ExtResource("3_xjrjl")

[node name="EnemyIdle" type="Node" parent="EnemyStateMachine"]
script = ExtResource("4_f5clw")

[node name="EnemyHit" type="Node" parent="EnemyStateMachine"]
script = ExtResource("5_77r7o")

[node name="EnemyDefeat" type="Node" parent="EnemyStateMachine"]
script = ExtResource("6_57xl1")

[node name="EnemyFollow" type="Node" parent="EnemyStateMachine"]
script = ExtResource("8_4rs64")

[node name="EnemyPrepare" type="Node" parent="EnemyStateMachine"]
script = ExtResource("9_2550r")

[node name="PrepareTimer" type="Timer" parent="EnemyStateMachine/EnemyPrepare"]
one_shot = true

[node name="EnemyAttack" type="Node" parent="EnemyStateMachine"]
script = ExtResource("10_l5fns")

[node name="FollowArea" type="Area2D" parent="."]
position = Vector2(-31.1836, -5)
scale = Vector2(0.5, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="FollowArea"]
position = Vector2(43.3673, 119.5)
shape = SubResource("RectangleShape2D_kxu8r")
debug_color = Color(0.590083, 0.453461, 0.803131, 0.42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-9.68359, 30.5)
shape = SubResource("RectangleShape2D_tmulh")

[node name="Hit" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_nllgd")
}

[node name="Body2" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_lgrry")
}
autoplay = "Idle"

[node name="Sprite2D3" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(42, -43)
texture = ExtResource("21_hisbq")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
material = ExtResource("22_ohcb8")
position = Vector2(40, 14)
texture = ExtResource("11_ejcw5")

[node name="Bulletmarker" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(113, 204)

[node name="Wings" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yx5xa")
}
autoplay = "wings"

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(78.8164, 0)
emitting = false
amount = 7
process_material = ExtResource("30_yqpc8")
texture = ExtResource("31_kwfql")
lifetime = 2.0
one_shot = true
preprocess = 0.2
explosiveness = 0.86
randomness = 0.67

[node name="GPUParticles2D2" type="GPUParticles2D" parent="."]
position = Vector2(-7, 89)
emitting = false
amount = 30
process_material = SubResource("ParticleProcessMaterial_s65u1")
texture = ExtResource("31_kwfql")
lifetime = 90.55
one_shot = true
explosiveness = 1.0
randomness = 0.12

[node name="DamageArea" type="Area2D" parent="."]
position = Vector2(-29.1836, 42)
scale = Vector2(0.5, 0.5)
script = ExtResource("32_ed5nx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(45, 110)
shape = SubResource("RectangleShape2D_kctrd")
debug_color = Color(0.960621, 0.526551, 0.690575, 0.419608)

[node name="Directiontimer" type="Timer" parent="."]
autostart = true

[node name="PrepareTimer" type="Timer" parent="."]

[node name="Statelabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -117.184
offset_top = -498.0
offset_right = 407.816
offset_bottom = -250.0
theme_override_font_sizes/font_size = 181
text = "STATE"
metadata/_edit_use_anchors_ = true

[node name="HPlabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -645.0
offset_top = -487.0
offset_right = -120.0
offset_bottom = -239.0
theme_override_font_sizes/font_size = 181
text = "HP
"
metadata/_edit_use_anchors_ = true

[node name="Attackbox" type="Area2D" parent="." groups=["EnemyAttackboxs"]]

[node name="Attackcollision" type="CollisionShape2D" parent="Attackbox"]
unique_name_in_owner = true
position = Vector2(199, 144)
shape = SubResource("RectangleShape2D_0iu8b")
disabled = true
debug_color = Color(0.986317, 0.0702289, 0.2335, 0.42)

[node name="Raycasts" type="Node2D" parent="."]
unique_name_in_owner = true
scale = Vector2(5, 5)

[node name="Rightraycast" type="RayCast2D" parent="Raycasts"]
rotation = -1.5708
scale = Vector2(2, 1)
target_position = Vector2(-7.23998e-05, 40)

[node name="Leftraycast" type="RayCast2D" parent="Raycasts"]
rotation = 1.5708
scale = Vector2(2, 1)
target_position = Vector2(-0.0999334, 36.8)

[node name="Upraycast" type="RayCast2D" parent="Raycasts"]
rotation = -3.15411
scale = Vector2(2, 1)
enabled = false
target_position = Vector2(-7.23998e-05, 40)

[node name="Downraycast" type="RayCast2D" parent="Raycasts"]
rotation = -0.0125099
scale = Vector2(2, 1)
enabled = false
target_position = Vector2(-0.455265, 56.7931)

[node name="DamagenumOrigin" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(-4, -329)

[connection signal="timeout" from="EnemyStateMachine/EnemyPrepare/PrepareTimer" to="EnemyStateMachine/EnemyPrepare" method="_on_prepare_timer_timeout"]
[connection signal="body_entered" from="FollowArea" to="." method="_on_follow_area_body_entered"]
[connection signal="body_exited" from="FollowArea" to="." method="_on_follow_area_body_exited"]
[connection signal="area_entered" from="DamageArea" to="." method="_on_damage_area_area_entered"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
[connection signal="timeout" from="Directiontimer" to="." method="_on_directiontimer_timeout"]
